Unit Tests added Optimized class structure